--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration/help-globalTagsEntry.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration/help-globalTagsEntry.html
@@ -3,4 +3,10 @@
     <pre>
         instance:east, language:french
     </pre>
+
+    Tags support the use of environment variables. The environment variables must be defined in the
+    master jenkins instance. Eg:
+    <pre>
+        optional:$ENV_VAR
+    </pre>
 </div>
