Enable CI Visibility in the Jenkins plugin UI

--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration/help-globalJobTagsEntry.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration/help-globalJobTagsEntry.html
@@ -8,7 +8,7 @@
     </pre>
 
     Tags support the use of environment variables. The environment variables must be defined in the
-    master jenkins instance. Eg:
+    Jenkins controller instance. Eg:
     <pre>
         susans-job, optional:$ENV_VAR
     </pre>
