--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration/help-globalTagsEntry.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/DatadogGlobalConfiguration/help-globalTagsEntry.html
@@ -5,7 +5,7 @@
     </pre>
 
     Tags support the use of environment variables. The environment variables must be defined in the
-    master jenkins instance. Eg:
+    Jenkins controller instance. Eg:
     <pre>
         optional:$ENV_VAR
     </pre>
