Update the docs

--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
@@ -37,4 +37,9 @@
         If these variables are overridden inside the job (with their existing value being discarded rather than preserved),
         the injection will not happen.
     </p>
+
+    <strong>.NET</strong>
+    <p>
+        The plugin assumes that <code>dotnet</code> and <code>dotnet tool</code> are available on the node that executes the job.
+    </p>
 </div>
