Rename Test Visibility to Test Optimization + fix tags precedence

--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
@@ -1,7 +1,7 @@
 <div>
     <p>
         Automatic tracer injection comes with some language-specific caveats.
-        Check the Test Visibility <a target="_blank" href="https://docs.datadoghq.com/tests/setup/">setup documentation for your language</a> to make sure that the testing framework that you use is supported.
+        Check the Test Optimization <a target="_blank" href="https://docs.datadoghq.com/tests/setup/">setup documentation for your language</a> to make sure that the testing framework that you use is supported.
     </p>
 
     <strong>Java</strong>
