--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-on.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-on.html
@@ -1,8 +1,8 @@
 <div>
     <p>
-        Enable Datadog <a target="_blank" href="https://docs.datadoghq.com/continuous_integration/tests/">Test Visibility</a> for this job.
+        Enable Datadog <a target="_blank" href="https://docs.datadoghq.com/continuous_integration/tests/">Test Optimization</a> for this job.
         This requires <a target="_blank" href="/configure">configuring</a> Datadog Plugin connectivity.
-        Please bear in mind that Test Visibility is a separate Datadog product that is billed separately.
+        Please bear in mind that Test Optimization is a separate Datadog product that is billed separately.
     </p>
 
     <p>
