Apply suggestions from code review
Co-authored-by: Nikita Tkachenko <121111529+nikita-tkachenko-datadog@users.noreply.github.com>

--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
@@ -42,9 +42,9 @@
         The plugin assumes that <code>dotnet</code> and <code>dotnet tool</code> are available on the node that executes the job.
     </p>
 
-    <strong>.NET</strong>
+    <strong>Ruby</strong>
     <p>
-        The plugin assumes that <code>Ruby</code> is available on the node that executes the job. The minimal support version
+        The plugin assumes that <code>Ruby</code> is available on the node that executes the job. The minimal supported version
         of Ruby is 2.7.
     </p>
 </div>
