--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
@@ -41,4 +41,10 @@
     <p>
         The plugin assumes that <code>dotnet</code> and <code>dotnet tool</code> are available on the node that executes the job.
     </p>
+
+    <strong>Ruby</strong>
+    <p>
+        The plugin assumes that <code>Ruby</code> is available on the node that executes the job. The minimal supported version
+        of Ruby is 2.7.
+    </p>
 </div>
