Go auto instrumentation

--- a/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
+++ b/src/main/resources/org/datadog/jenkins/plugins/datadog/apm/DatadogTracerJobProperty/help-languages.html
@@ -47,4 +47,9 @@
         The plugin assumes that <code>Ruby</code> is available on the node that executes the job. The minimal supported version
         of Ruby is 2.7.
     </p>
+
+    <strong>Go</strong>
+    <p>
+        The plugin assumes that <code>go</code> is available on the node that executes the job.
+    </p>
 </div>
